[v8r6-pre11]
Use DIRAC v6r17p12

* fixed setting of compression level
* using LHCbDIRAC version
* replace __strip... with _strip...
* logging where it should be

[v8r6-pre10]
Use DIRAC v6r17p12

* split test, removed importlib
* added ganga test jobs
* Comment pr.resolveSteps() call as it's not needed and prevents compressionLvl variable from being filled correctly
* fixes for user jobs
* self.siteName is unknown before resolveInputVariables

[v8r6-pre9]
Use DIRAC v6r17p11

 * clever naming
 * get iterators and remove has_key
 * review getDestinationSEList() and use for Failover
 * corrected location
 * using a fuction
 * fix for spaces
 * Release doc for Mesos
 * interpreting DNs
 * test fix
 * fixed creation
 * re-saving for security variables

[v8r6-pre8]
Use DIRAC v6r17p11

* added test dv v41r2
* added tests for LHCbScript jobs
* reading numberOfEvents from step
* one more cycle
* added limit of 1 event
* using bash
* test
* fix for jenkins
* using env file in test
* Saving/using environment file
* Use Externals v6r5p4 for GSI and LCG for pyparsing

[v8r6-pre7]
Use DIRAC v6r17p10

* log and messages
* submitting gauss job to Jenkins
* added gaudiApplicationScript job
* Identifying correctly LbLogin errors
* added rooFit test job
* simpler tests
* removed test for ProductionLogAnalysis.py
* partial removal of AnalyseLogFile
* basic fix for loading WMSSecureGW
* log outputs fix

[v8r6-pre6]
Use DIRAC v6r17p9

* removing outdated code
* added fileMask in template
* LBLOGINDEV in Jenkins
* lbLoginDev in pilot

[v8r6-pre5]
Use DIRAC v6r17p8

* Fixed a couple of typoes
* Forgot to delete a duplicate line
* Improved the logic of insertion of the compression levels
* Fixed pr.compressionLvl as list of lists to comply with the step granularity
* More tests, added compression defaults to MC template
* Add the possibility to delete a compression level if present, but not needed, in the OptionFiles
* Set default compression level in the template for Merging prodctions