@@ -7,6 +7,13 @@ Sources
 
 Releases
 {
+
+  v8r6-pre12
+  {
+    Modules = LHCbDIRAC:v8r6-pre12, LHCbWebDIRAC:v4r2p6
+    Depends = DIRAC:v6r17p13
+    LcgVer = 2017-01-27
+  }
   
   v8r6-pre11
   {
